--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "dev:migrate": "tsx --env-file=.env ./migrate"
   },
   "dependencies": {
     "@libsql/client": "^0.15.15",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
-    "husky": "^9.1.7"
+    "husky": "^9.1.7",
+    "tsx": "^4.21.0"
   }
 }
