--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@nuxt/icon": "^2.1.1",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "husky": "^9.1.7",
     "tsx": "^4.21.0"
