--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev:migrate": "tsx --env-file=.env ./migrate"
   },
   "dependencies": {
+    "@iconify-json/lucide": "^1.2.82",
     "@libsql/client": "^0.15.15",
     "@nuxt/eslint": "1.12.1",
     "bad-words": "^4.0.0",
@@ -23,8 +24,7 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@nuxt/icon": "^2.1.1",
-    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@nuxt/ui": "^4.3.0",
     "husky": "^9.1.7",
     "tsx": "^4.21.0"
   }
