--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bad-words": "^4.0.0",
     "eslint": "^9.39.2",
     "nuxt": "^4.2.2",
+    "tslib": "^2.8.1",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
